<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MythTV Player An application for Android users to play MythTV Recordings and Videos
  ~ Copyright (c) 2015. Daniel Frey
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/video_preferences"
        android:key="pref_watch_videos">

        <CheckBoxPreference
            android:title="@string/pref_show_adult_tab"
            android:key="show_adult_tab"
            android:defaultValue="false"
            android:summaryOn="@string/pref_show_adult_tab_summary_on"
            android:summaryOff="@string/pref_show_adult_tab_summary_off" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_parental_controls"
        android:key="pref_parental_controls">

        <CheckBoxPreference
            android:title="@string/pref_enable_parental_controls"
            android:key="enable_parental_controls"
            android:defaultValue="false"
            android:summaryOn="@string/pref_enable_parental_controls_summary_on"
            android:summaryOff="@string/pref_enable_parental_controls_summary_off" />

        <ListPreference
            android:title="@string/pref_parental_control_level"
            android:key="parental_control_level"
            android:defaultValue="4"
            android:dependency="enable_parental_controls"
            android:entries="@array/parental_control_level_entries"
            android:entryValues="@array/parental_control_level_values" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_content_ratings"
        android:key="pref_content_ratings">

        <CheckBoxPreference
            android:title="@string/pref_restrict_content_types"
            android:key="restrict_content_types"
            android:defaultValue="false"
            android:summaryOn="@string/pref_restrict_content_types_summary_on"
            android:summaryOff="@string/pref_restrict_content_types_summary_off" />

        <CheckBoxPreference
            android:title="@string/pref_rating_nr"
            android:summary="@string/pref_rating_nr_summary"
            android:key="rating_nr"
            android:defaultValue="false"
            android:dependency="restrict_content_types" />

        <CheckBoxPreference
            android:title="@string/pref_rating_g"
            android:summary="@string/pref_rating_g_summary"
            android:key="rating_g"
            android:defaultValue="false"
            android:dependency="restrict_content_types" />

        <CheckBoxPreference
            android:title="@string/pref_rating_pg"
            android:summary="@string/pref_rating_pg_summary"
            android:key="rating_pg"
            android:defaultValue="false"
            android:dependency="restrict_content_types" />

        <CheckBoxPreference
            android:title="@string/pref_rating_pg13"
            android:summary="@string/pref_rating_pg13_summary"
            android:key="rating_pg13"
            android:defaultValue="false"
            android:dependency="restrict_content_types" />

        <CheckBoxPreference
            android:title="@string/pref_rating_r"
            android:summary="@string/pref_rating_r_summary"
            android:key="rating_r"
            android:defaultValue="false"
            android:dependency="restrict_content_types" />

        <CheckBoxPreference
            android:title="@string/pref_rating_nc17"
            android:summary="@string/pref_rating_nc17_summary"
            android:key="rating_nc17"
            android:defaultValue="false"
            android:dependency="restrict_content_types" />

    </PreferenceCategory>

</PreferenceScreen>