<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_default_player"
        android:key="pref_default_player">

        <SwitchPreference
            android:title="@string/pref_internal_player"
            android:key="internal_player"
            android:defaultValue="true"
            android:summaryOn="@string/pref_internal_player_summary_on"
            android:summaryOff="@string/pref_internal_player_summary_off" />

        <SwitchPreference
            android:dependency="internal_player"
            android:title="@string/pref_external_player_override_video"
            android:key="external_player_override_video"
            android:defaultValue="false"
            android:summaryOn="@string/pref_external_player_override_video_summary_on"
            android:summaryOff="@string/pref_external_player_override_video_summary_off" />

        <ListPreference
            android:dependency="internal_player"
            android:key="hls_video_width"
            android:title="@string/pref_hls_video_width_title"
            android:summary="@string/pref_hls_video_width_title_summary"
            android:dialogTitle="@string/pref_hls_video_width_title"
            android:entries="@array/pref_hls_video_width_entries"
            android:entryValues="@array/pref_hls_video_width_values"
            android:defaultValue="@string/pref_hls_video_width_default" />

        <ListPreference
            android:dependency="internal_player"
            android:key="hls_video_height"
            android:title="@string/pref_hls_video_height_title"
            android:summary="@string/pref_hls_video_height_title_summary"
            android:dialogTitle="@string/pref_hls_video_height_title"
            android:entries="@array/pref_hls_video_height_entries"
            android:entryValues="@array/pref_hls_video_height_values"
            android:defaultValue="@string/pref_hls_video_height_default" />

        <ListPreference
            android:dependency="internal_player"
            android:key="hls_video_bitrate"
            android:title="@string/pref_hls_video_bitrate_title"
            android:summary="@string/pref_hls_video_bitrate_title_summary"
            android:dialogTitle="@string/pref_hls_video_bitrate_title"
            android:entries="@array/pref_hls_video_bitrate_entries"
            android:entryValues="@array/pref_hls_video_bitrate_values"
            android:defaultValue="@string/pref_hls_video_bitrate_default" />

        <ListPreference
            android:dependency="internal_player"
            android:key="hls_audio_bitrate"
            android:title="@string/pref_hls_audio_bitrate_title"
            android:summary="@string/pref_hls_audio_bitrate_title_summary"
            android:dialogTitle="@string/pref_hls_audio_bitrate_title"
            android:entries="@array/pref_hls_audio_bitrate_entries"
            android:entryValues="@array/pref_hls_audio_bitrate_values"
            android:defaultValue="@string/pref_hls_audio_bitrate_default" />

    </PreferenceCategory>

</PreferenceScreen>
