<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="backend_url"
        android:title="@string/pref_backend_url_title"
        android:summary="@string/pref_backend_url_description"
        android:defaultValue="@string/pref_backend_url"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="backend_port"
        android:title="@string/pref_backend_port_title"
        android:summary="@string/pref_backend_port_description"
        android:defaultValue="@string/pref_backend_port"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:maxLines="1"
        android:numeric="integer"
        android:maxLength="4" />

</PreferenceScreen>
