<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MythTV Player An application for Android users to play MythTV Recordings and Videos
  ~ Copyright (c) 2015. Daniel Frey
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_set_default_recording_group"
        android:key="pref_set_default_recording_group">

        <SwitchPreference
            android:title="@string/pref_enable_default_recording_group"
            android:key="enable_default_recording_group"
            android:defaultValue="false"
            android:summaryOn="@string/pref_default_recording_group_summary_on"
            android:summaryOff="@string/pref_default_recording_group_summary_off"
            android:enabled="false" />

        <ListPreference
            android:title="@string/pref_default_recording_group"
            android:key="default_recording_group"
            android:defaultValue="Default"
            android:dependency="enable_default_recording_group" />

    </PreferenceCategory>

</PreferenceScreen>